--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <base href="./">
-    <link rel="alternate" hreflang="en" href="./en/" />
-    <link rel="alternate" hreflang="de" href="./de/" />
-    <link rel="alternate" hreflang="es" href="./es/" />
-    <link rel="alternate" hreflang="fr" href="./fr/" />
-    <link rel="alternate" hreflang="it" href="./it/" />
-    <link rel="alternate" hreflang="pt" href="./pt/" />
-    <link rel="alternate" hreflang="hi" href="./hi/" />
-    <link rel="alternate" hreflang="x-default" href="./" />
+    <link rel="alternate" hreflang="en" href="https://maper77.github.io/WhatsGo/en/" />
+    <link rel="alternate" hreflang="de" href="https://maper77.github.io/WhatsGo/de/" />
+    <link rel="alternate" hreflang="es" href="https://maper77.github.io/WhatsGo/es/" />
+    <link rel="alternate" hreflang="fr" href="https://maper77.github.io/WhatsGo/fr/" />
+    <link rel="alternate" hreflang="it" href="https://maper77.github.io/WhatsGo/it/" />
+    <link rel="alternate" hreflang="pt" href="https://maper77.github.io/WhatsGo/pt/" />
+    <link rel="alternate" hreflang="hi" href="https://maper77.github.io/WhatsGo/hi/" />
+    <link rel="alternate" hreflang="x-default" href="https://maper77.github.io/WhatsGo/" />
 
     <!-- JS LANGUAGES -->
     <script>
@@ -67,9 +67,9 @@
         <meta class="ogUpdated_time" property="og:updated_time" content="1620614945">
         <meta class="ogTitle" property="og:title" content="Start a conversation without registering the contact !!!">
         <meta class="ogDescription" property="og:description" content="Enter the number and click to open WhatsApp.">
-        <meta class="ogUrl" property="og:url" content="https://whatsgo.app/en/">
+        <meta class="ogUrl" property="og:url" content="https://maper77.github.io/WhatsGo/en/">
         <meta property="og:type" content="article">
-        <meta property="og:image" content="https://whatsgo.app/image/ogImage.png?8">
+        <meta property="og:image" content="https://maper77.github.io/WhatsGo/image/ogImage.png?8">
         <meta property="og:image:type" content="image/png">
         <meta property="og:site_name" content="WhatsGO.app">
         <meta property="og:image:width" content="600">
@@ -78,10 +78,10 @@
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="whatsgo.app">
-        <meta class="ogUrl" property="twitter:url" content="https://whatsgo.app/en/">
+        <meta class="ogUrl" property="twitter:url" content="https://maper77.github.io/WhatsGo/en/">
         <meta class="ogTitle" name="twitter:title" content="Start a conversation without registering the contact !!!">
         <meta class="ogDescription" name="twitter:description" content="Enter the number and click to open WhatsApp.">
-        <meta name="twitter:image" content="https://whatsgo.app/image/ogImage.png?8">
+        <meta name="twitter:image" content="https://maper77.github.io/WhatsGo/image/ogImage.png?8">
     </meta>
 
     <!-- https://realfavicongenerator.net/favicon_result?file_id=p1f40q5n74gng1ct41mmd18ik2vt6#.YIN__pBKguU -->
